--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
+DJANGO_SECRET_KEY='django-insecure-6l@uosy*ih$xs66b7=8s(w)$wb@nd9(ui0q=8h6dt+^q*!n-%s'
 CHANNEL_LAYER_REDIS_URL=redis://127.0.0.1:6379
